Added PetRequestEvent and cleaned GivePetCommand a bit. Code cleanup.